fix on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@ body {
 }
 
 code {
-  font-size: 2rem;
+  font-size: 2.2vh;
 }
 
 h1 {
